# GGAN

./: CMakeLists.txt  Config.cmake.in  README.md
include/custom-modules/: ggan.hpp
